--- a/crude/src/main/resources/application.properties
+++ b/crude/src/main/resources/application.properties
@@ -9,6 +9,6 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/usercrude
 spring.datasource.username=postgres
-spring.datasource.password=Admin123!
+spring.datasource.password=admin123!
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
